# AbraTab

./: .gitignore  .ignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
design/habit-detail/: a-ring.html  b-almanac.html  c-minimal.html  d-cups.html  index.html
scripts/: abratab.bash  abratab.fish  abratab.zsh  install-zsh-integration.sh  uninstall-zsh-integration.sh
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  gitee_sync.rs  lib.rs  main.rs  mcp.rs  models.rs  qiniu.rs  store.rs
