[package]
name = "abratab"
version = "0.1.0"
description = "Terminal snippet manager"
authors = ["AbraTab"]
edition = "2021"
default-run = "abratab"

[lib]
name = "abratab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "abratab"
path = "src/main.rs"

[[bin]]
name = "abratab-cli"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
arboard = "3"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
