[package]
name = "abratab"
version = "0.4.0"
description = "Terminal snippet manager"
authors = ["AbraTab"]
edition = "2021"
default-run = "abratab"

[lib]
name = "abratab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "abratab"
path = "src/main.rs"

[[bin]]
name = "abratab-cli"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
arboard = "3"
base64 = "0.22"
dirs = "5"
hmac = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.13.4", features = ["json", "multipart"] }
sha1 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
